syntax = "proto3";

option csharp_namespace = "Route256.Week5.Homework.PriceCalculator.GrpcServices";

service DeliveryPriceCalculator {
  rpc Calculate (CalculationRequest) returns (CalculationResponse);
  rpc ClearHistory (ClearHistoryRequest) returns (ClearHistoryResponse);
  rpc GetHistory (GetHistoryRequest) returns (stream GetHistoryResponse);
}

message GetHistoryResponse {
  CargoResponse Cargo = 1;
  DecimalValue Price = 2;
}

message CargoResponse {
  double Volume = 1;
  double Weight = 2;
  repeated int64 GoodIds = 3;
}

message GetHistoryRequest {
  int64 UserId = 1;
}

message ClearHistoryResponse {
  
}

message ClearHistoryRequest {
  int64 UserId = 1;
  repeated int64 CalculationIds = 2;
}

message CalculationRequest {
  int64 UserId = 1;
  repeated Good Goods = 2;
}

message Good {
  double Height = 1;
  double Length = 2;
  double Width = 3;
  double Weight = 4;
}

message CalculationResponse {
  int64 CalculationId = 1;
  DecimalValue Price = 2;
}

message DecimalValue {
  int64 units = 1;
  sfixed32 nanos = 2;
}